Inserção de novas fotos

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -160,7 +160,7 @@
                       </div>
                     </div>
             </li>
-            <li class="post" data-category="integracoes">
+            <li class="post" data-category="integracoes ecommerce">
                     <div class="post-module hover">
                       <!-- Thumbnail-->
                       <div class="thumbnail">
@@ -179,11 +179,42 @@
                         <div class="post-meta">
                           <span class="timestamp">HTML</span>
                           <span class="timestamp">PHP</span>
+                          <span class="timestamp">Wordpress</span>
+                          <span class="timestamp">Woocommerce</span>
                           <span class="timestamp">cURL</span>
                           <span class="timestamp">JSON</span>
                           <span class="timestamp">Bootstrap</span>
                           <span class="timestamp">jQuery</span>
                           <span class="timestamp">MySQL</span>
+                        </div>
+                      </div>
+                    </div>
+            </li>
+            
+            <li class="post" data-category="ecommerce">
+                    <div class="post-module hover">
+                      <!-- Thumbnail-->
+                      <div class="thumbnail">
+                        <!--<div class="date">
+                          <div class="day">2021</div>
+                          <div class="month">Mar</div>
+                        </div>-->
+                        <img src="assets/images/portfolio/fotocristal-3d.webp"/>
+                      </div>
+                      <!-- Post Content-->
+                      <div class="post-content">
+                        <div class="category">E-Commerce</div>
+                        <h1 class="title">loja online FOTOCRISTAL 3D</h1>
+                        <!--<h2 class="sub_title">The city that never sleeps.</h2>-->
+                        <p class="description">Desenvolvimento de uma loja online que permitisse à FOTOCRISTAL 3D vender os seus produtos personalizados. Desenvolvida em Magento na versão 2, implementado um layout responsive e campos personalizados nos produtos desponibiolizados na loja online. </p>
+                        <div class="post-meta">
+                          <span class="timestamp">HTML</span>
+                          <span class="timestamp">Magento 2</span>
+                          <span class="timestamp">PHP</span>
+                          <span class="timestamp">CSS</span>
+                          <span class="timestamp">MySQL</span>
+                          <span class="timestamp">Composer</span>
+                          <span class="timestamp">SSH</span>
                         </div>
                       </div>
                     </div>
@@ -303,7 +334,7 @@
             </li>
 
 
-            <li class="post" data-category="integracoes">
+            <li class="post" data-category="integracoes ecommerce">
                     <div class="post-module hover">
                       <!-- Thumbnail-->
                       <div class="thumbnail">
@@ -322,6 +353,7 @@
                         <div class="post-meta">
                           <span class="timestamp">HTML</span>
                           <span class="timestamp">Wordpress</span>
+                          <span class="timestamp">Woocommerce</span>
                           <span class="timestamp">PHP</span>
                           <span class="timestamp">cURL</span>
                           <span class="timestamp">Javascript</span>
@@ -396,6 +428,8 @@
                       </div>
                     </div>
             </li>
+
+
           </ol>
 
       </div>
