--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-7">
                         <div class="header_hero_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="1.8s">
-                            <img src="assets/images/hero.webp" alt="hero">
+                            <img src="assets/images/ricardo-mota-web-developer.webp" alt="hero">
                         </div> <!-- header hero image -->
                     </div>
                 </div> <!-- row -->
